fix: linter fixes

--- a/src/pages/reset-password.astro
+++ b/src/pages/reset-password.astro
@@ -33,14 +33,6 @@ const token = "";
 
   {/* Client-side script to extract token from URL hash */}
   <script>
-    // Extract token from URL hash (#access_token=...)
-    // This will be replaced with actual implementation when auth is ready
-    const hash = window.location.hash.substring(1);
-    const params = new URLSearchParams(hash);
-    const token = params.get('access_token') || '';
-    
-    // TODO: Pass token to form component when auth is implemented
-    // For now, this is just a placeholder
+    // TODO: Extract token from URL hash when auth is implemented
   </script>
 </Layout>
-
